CHANGES IN VERSION 1.18.0
-------------------------

NEW FEATURES

    o Add global options 'showHeadLines' and 'showTailLines' to
      control the number of head/tails lines displayed by "show" methods
      for Ranges, DataTable, and Hits objects.

    o "subset" method for Vector objects now considers metadata columns.

    o Add classNameForDisplay() generic and use it in all "show" methods
      defined in IRanges and GenomicRanges.

    o as(x, "DataFrame") now works on *any* R object.

    o Add findMatches(), an enhanced version of match() that returns all the
      matches between 'x' and 'table'. The hits are returned in a Hits object.
      Also add countMatches() for counting the number of matches in 'table'
      for each element in 'x'.

    o Add overlapsAny() as a replacement for %in% (now deprecated on
      range-based objects), and %over% and %within% as convenience wrappers
      for overlapsAny(). %over% is the replacement for %in%.

    o Add 'with.mapping' arg to "reduce" methods for IRanges, Ranges, Views,
      RangesList, and CompressedIRangesList objects.

    o Add "order" method for Rle objects.

    o Add subsetByRanges() generic with methods for ANY, NULL, vector, and
      IRanges for now. This is work-in-progress and more methods will be added
      soon. The long term plan is to make this a replacement for seqselect(),
      but with a faster and cleaner implementation.

    o Add promoters() generic with methods for Ranges, RangesList, Views, and
      CompressedIRangesList objects.

    o elementLengths() now works on XVectorList objects (and thus works on
      DNAStringSet objects and family defined in the Biostrings package).
      Note that this is the first step towards having relist() work on XVector
      objects (e.g. DNAString objects) eventhough this is not ready yet.

    o Add "mstack" method for DataFrame objects.

    o Add 'name.var' argument to "stack" method for List objects for naming